more mongodb edits - removed apache commons